Added sql hits in the service.

--- a/WhatShouldIPlay/app/public/index.html
+++ b/WhatShouldIPlay/app/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>What Should I Buy?</title>
+    <title>What Should I Play?</title>
     <meta name="description" content="Find your next game.">
 
     <!--Angular Material CSS-->
@@ -21,8 +21,6 @@
 
 </head>
 <body>
-    Hello from Index!!!!!!
-
     <button ui-sref="home">Home</button>
     <button ui-sref="login">Login</button>
 
