Added encryption to login and registration. Still need to work on the html and angular

--- a/WhatShouldIPlay/app/public/index.html
+++ b/WhatShouldIPlay/app/public/index.html
@@ -23,6 +23,7 @@
 <body>
     <button ui-sref="home">Home</button>
     <button ui-sref="login">Login</button>
+    <button ui-sref="register">Register</button>
 
     <div ui-view></div>
 
