--- a/WhatShouldIPlay/app/public/modules/login/login.html
+++ b/WhatShouldIPlay/app/public/modules/login/login.html
@@ -1,3 +1,6 @@
 ﻿{{loginCtrl.hello}}
-
+Email
+<input ng-model="loginCtrl.item.email" />
+Pass
+<input ng-model="loginCtrl.item.basicPass"/>
 <button ng-click="loginCtrl.login()">Login</button>
