Added basic CRUD to add a game page.

--- a/WhatShouldIPlay/app/public/index.html
+++ b/WhatShouldIPlay/app/public/index.html
@@ -22,8 +22,9 @@
 </head>
 <body>
     <button ui-sref="home">Home</button>
-    <button ui-sref="login">Login</button>
     <button ui-sref="register">Register</button>
+    <button ui-sref="login">Login</button>
+    <button ui-sref="games">Games</button>
 
     <div ui-view></div>
 
@@ -42,5 +43,6 @@
     <!--Bootstrap JS-->
     <script src="/Scripts/bootstrap.min.js"></script>
 
+    <!--If you don't have Gulp, then need to put angular controllers and services in scripts and reference them here. HTML goes in app folder.-->
 </body>
 </html>
