Added web scraping.

--- a/WhatShouldIPlay/app/public/index.html
+++ b/WhatShouldIPlay/app/public/index.html
@@ -25,6 +25,7 @@
     <button ui-sref="register">Register</button>
     <button ui-sref="login">Login</button>
     <button ui-sref="games">Games</button>
+    <button ui-sref="scraper">Scraper</button>
 
     <div ui-view></div>
 
