Added stack overflow third party api.

--- a/WhatShouldIPlay/app/public/index.html
+++ b/WhatShouldIPlay/app/public/index.html
@@ -26,6 +26,7 @@
     <button ui-sref="login">Login</button>
     <button ui-sref="games">Games</button>
     <button ui-sref="scraper">Scraper</button>
+    <button ui-sref="stackoverflow">Stack Overflow</button>
 
     <div ui-view></div>
 
