Added file upload and set site to localhost instead of iis because recieved https error with my ssl.

--- a/WhatShouldIPlay/app/public/index.html
+++ b/WhatShouldIPlay/app/public/index.html
@@ -27,6 +27,7 @@
     <button ui-sref="games">Games</button>
     <button ui-sref="scraper">Scraper</button>
     <button ui-sref="stackoverflow">Stack Overflow</button>
+    <button ui-sref="fileupload">File Upload</button>
 
     <div ui-view></div>
 
@@ -34,6 +35,7 @@
     <script src="/Scripts/jquery-1.10.2.min.js"></script>
     <script src="/Scripts/angular.min.js"></script>
     <script src="/Scripts/angular-ui-router.min.js"></script>
+    <script src="/bower_components/angular-img-cropper/dist/angular-img-cropper.min.js"></script>
     <script src="/Scripts/dest/public/app.public.js"></script>
     <script src="/Scripts/toastr.min.js"></script>
 
