--- a/WhatShouldIPlay/app/public/modules/gameProfile/gameProfile.html
+++ b/WhatShouldIPlay/app/public/modules/gameProfile/gameProfile.html
@@ -1,30 +1,27 @@
-﻿{{gPCtrl.hello}}
+﻿<h1>{{gPCtrl.hello}}</h1>
+<md-input-container>
+    <label for="title">Title</label>
+    <input id="title" ng-model="gPCtrl.item.title" />
+</md-input-container>
+<md-input-container>
+    <label for="platforms">Platform(s)</label>
+    <input id="platforms" ng-model="gPCtrl.item.platforms" />
+</md-input-container>
+<md-input-container>
+    <label for="genres">Genre(s)</label>
+    <input id="gentres" ng-model="gPCtrl.item.genres" />
+</md-input-container>
+<md-input-container>
+    <label for="studio">Development Studio</label>
+    <input id="studio" ng-model="gPCtrl.item.studio" />
+</md-input-container>
+<md-input-container>
+    <label for="directors">Director(s)</label>
+    <input id="directors" ng-model="gPCtrl.item.directors" />
+</md-input-container>
 <br />
-
-Title
-<input ng-model="gPCtrl.item.title" />
-<br />
-Plaform(s)
-<input ng-model="gPCtrl.item.platforms"/>
-<br />
-Genre(s)
-<input ng-model="gPCtrl.item.genres"/>
-<br />
-Development Studio
-<input ng-model="gPCtrl.item.studio"/>
-<br />
-Director(s)
-<input ng-model="gPCtrl.item.directors"/>
-<br />
-<button ng-click="gPCtrl.addGame()">Add Game</button>
-<br />
-<button ng-click="gPCtrl.getAllGames()">Select All Games</button>
-<br />
-ID
-<input ng-model="gPCtrl.item.id" />
-<br />
-<button ng-click="gPCtrl.getGameById()">Get Game</button>
-<br />
-<button ng-click="gPCtrl.updateGame()">Update Game</button>
-<br />
-<button ng-click="gPCtrl.deleteGame()">Delete Game</button>
+<md-button class="md-primary md-raised" ng-click="gPCtrl.addGame()">Add Game</md-button>
+<md-button ng-show="gPCtrl.editing" class="md-primary md-raised" ng-click="gPCtrl.updateGame()">Update Game</md-button>
+<div ng-repeat="game in gPCtrl.gamesList | orderBy : 'title'">
+    <h4>{{game.title}}</h4> <a ng-click="gPCtrl.getGameById(game.id)" class="glyphicon glyphicon-pencil"></a> <a ng-click="gPCtrl.deleteGame(game.id)" class="glyphicon glyphicon-trash"></a>
+</div>
