--- a/WhatShouldIPlay/app/public/modules/login/login.html
+++ b/WhatShouldIPlay/app/public/modules/login/login.html
@@ -9,4 +9,4 @@
     <input id="pass" ng-model="loginCtrl.item.basicPass" />
 </md-input-container>
 <br />
-<md-button class="md-primary md-raised" ng-click="loginCtrl.login()">Login</md-button>
+<md-button class="md-accent md-raised" ng-click="loginCtrl.login()">Login</md-button>
