--- a/WhatShouldIPlay/app/public/modules/register/register.html
+++ b/WhatShouldIPlay/app/public/modules/register/register.html
@@ -8,4 +8,4 @@
     <input id="pass" type="password" ng-model="regCtrl.item.basicPass" />
 </md-input-container>
 <br />
-<md-button class="md-primary md-raised" ng-click="regCtrl.register()">Register</md-button>
+<md-button class="md-accent md-raised" ng-click="regCtrl.register()">Register</md-button>
