--- a/WhatShouldIPlay/app/public/modules/webscraper/webscraper.html
+++ b/WhatShouldIPlay/app/public/modules/webscraper/webscraper.html
@@ -1,6 +1,6 @@
 ﻿<h1>{{scrapeCtrl.hello}}</h1>
 
-<md-button class="md-primary md-raised" ng-click="scrapeCtrl.getPosts()">Get Posts</md-button>
+<md-button class="md-accent md-raised" ng-click="scrapeCtrl.getPosts()">Get Posts</md-button>
 <div ng-repeat="post in scrapeCtrl.results">
     <h4>{{post.title}}</h4>
     <md-button class="md-accent md-raised" href="{{post.url}}">Link</md-button> 
