--- a/WhatShouldIPlay/app/public/modules/fileupload/fileupload.html
+++ b/WhatShouldIPlay/app/public/modules/fileupload/fileupload.html
@@ -16,6 +16,6 @@
         <div ng-show="uploadCtrl.cropper.croppedImage"><img ng-src="{{uploadCtrl.cropper.croppedImage}}" /></div>
     </div>
     <div>
-        <md-button class="md-primary md-raised" ng-click="uploadCtrl.uploadFile()">Upload</md-button>
+        <md-button class="md-accent md-raised" ng-click="uploadCtrl.uploadFile()">Upload</md-button>
     </div>
 </div>
